src/test/ui/non-constant-expr-for-arr-len.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/non-constant-expr-for-arr-len.rs:15:22
   |
15 |         let _x = [0; n];
   |                      ^ non-constant value

error: aborting due to previous error

